infraestructura/k8s/aws/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: arq-ref-demo  # creacion y parametrizacion del namespace para la aplicacion
