infraestructura/k8s/aws/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: arq-ref-demo
  name: arq-ref-demo-back-svc
  labels:
    app: arq-ref-demo-back
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-internal: 0.0.0.0/0
spec:
  selector:
    app: arq-ref-demo-back
  ports:
    - name: port1
      protocol: TCP
      port: 8443
      targetPort: 8443
  type: NodePort
