infraestructura/k8s/aws/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: arq-ref-demo
  name: "arqdemo-ingress"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: instance
    #always internal not use others schemas
    alb.ingress.kubernetes.io/scheme: internal
    #ids subnets used for cluster EKS
    alb.ingress.kubernetes.io/subnets: 'subnet-08fba8ce018249007, subnet-08717305aa27a51d8'
    #security groud clusters
    alb.ingress.kubernetes.io/security-group: 'sg-064f6cb7a3716fed2'
    alb.ingress.kubernetes.io/healthcheck-path: "/"
    alb.ingress.kubernetes.io/success-codes: "200"
  labels:
    app: nginx
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: "arq-ref-demo-back"
              servicePort: 80
